add css style for goodsummay

--- a/src/components/goodssummary/goodssummary.less
+++ b/src/components/goodssummary/goodssummary.less
@@ -1,4 +1,18 @@
 .goods-summary {
-    text-align: left;
-    padding: 12px;
+  text-align: left;
+
+  .graph-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+    .sales-graph,
+    .category-graph {
+      width: 50%;
+    }
+
+    .ant-progress:not(.ant-progress:first-child) {
+        margin-left: 20px;
+    }
+  }
 }
