--- a/src/components/admin/admin.less
+++ b/src/components/admin/admin.less
@@ -1,30 +1,55 @@
 .ant-layout {
+  height: 100vh;
+  position: relative;
+  background-color: #fff;
+
+  .ant-layout-header {
+    position: absolute;
+    display: flex;
+    width: 100%;
+    top: 0;
+    left: 0;
+    padding: 0 20px;
+    height: 50px;
+    line-height: 50px;
+
+    .welcome {
+      font-size: 18px;
+      font-weight: bold;
+    }
+
+    .logout {
+        flex: 1;
+        text-align: right;
+    }
+  }
+
+  .ant-layout-sider {
     height: 100vh;
-    position: relative;
+    background: #001529;
+  }
 
-    .ant-layout-header {
-        position:absolute;
-        width: 100%;
-        top:0;
-        left:0;
-    }
+  .ant-layout-footer {
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    padding: 8px 50px;
+    background: #f5f5f5;
+    font-size: 12px;
+  }
 
-    .ant-layout-sider {
-        height: 100vh;
-        background: #001529;
-    }
+  .ant-layout-content {
+    width: 100%;
+    position: absolute;
+    top: 64px;
+    bottom: 64px;
+    overflow: auto;
+    padding: 0 18px;
+    background: white;
+  }
 
-    .ant-layout-footer {
-        position:absolute;
-        width: 100%;
-        bottom:0;
-    }
-
-    .ant-layout-content {
-        width: 100%;
-        position:absolute;
-        top:64px;
-        bottom:64px;
-        overflow: auto;
-    }
+  .ant-breadcrumb {
+    text-align: left;
+    margin: 10px 0;
+  }
 }
